Fix verify warning. Was overflowing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,10 +195,8 @@ h1 {
 }
 
 #please-verify {
-  width: 100%;
   background: #FFAB4A;
   padding: 10px;
-  position: relative;
   z-index: 20;
   text-align: center;
   a {
@@ -392,7 +390,7 @@ h5 {
 .text-small {
   font-size: 14px;
   line-height: 24px;
-  color: #AAAAAA;
+  color: #666;
 }
 
 .page-intro {
